fixtures/errors/duplicate_label.js
again: {
  again: {
    console.log(1);
  }
}
