fixtures/errors/duplicate_label.expected
exit_code: 1
--- stdout ---
--- stderr ---
Error: error: duplicate label `again`
 --> errors/duplicate_label.js:2:3
2 |   again: {
  |   ^^^^^

